<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.CreateAddressFragment">


    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/linearMargin"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/HeaderTitleStyle"
            android:paddingHorizontal="0dp"
            android:text="@string/createAddress" />

        <TextView
            style="@style/LabelStyle"
            android:layout_marginTop="30dp"
            android:text="@string/Name" />

        <EditText
            android:id="@+id/edName"
            style="@style/EditTextStyle"
            android:inputType="textPersonName" />

        <TextView
            style="@style/LabelStyle"
            android:layout_marginTop="30dp"
            android:text="@string/Addresslane" />

        <EditText
            android:id="@+id/edAddress"
            style="@style/EditTextStyle"
            android:inputType="text" />

        <TextView
            style="@style/LabelStyle"
            android:layout_marginTop="30dp"
            android:text="@string/city" />

        <EditText
            android:id="@+id/edCity"
            style="@style/EditTextStyle"
            android:inputType="text" />

        <TextView
            style="@style/LabelStyle"
            android:layout_marginTop="30dp"
            android:text="@string/postalCode" />

        <EditText
            android:id="@+id/edPostalCode"
            style="@style/EditTextStyle"
            android:inputType="number" />

        <TextView
            style="@style/LabelStyle"
            android:text="@string/phoneNumber"
             />

        <EditText
            android:id="@+id/edPhoneNumber"
            style="@style/EditTextStyle"
            android:inputType="phone" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCreateAddress"
                style="@style/buttonStyle"
                android:layout_gravity="bottom"
                android:layout_marginHorizontal="0dp"
                android:layout_marginBottom="30dp"
                android:text="@string/add_address"

                />
        </FrameLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>