<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.Registration.SignupFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_marginHorizontal="@dimen/_22sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/_18sdp"
            android:text="@string/signup"
            android:textColor="@color/black1"
            android:textSize="@dimen/_30sdp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Name"
            style="@style/LabelStyle"
             />

        <EditText
            android:id="@+id/edName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
           style="@style/EditTextStyle" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/LabelStyle"
            android:text="@string/Email"
             />

        <EditText
            android:id="@+id/edEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            style="@style/EditTextStyle" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/LabelStyle"
            android:text="@string/phoneNumber"
             />

        <EditText
            android:id="@+id/edPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            style="@style/EditTextStyle" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/LabelStyle"
            android:layout_marginBottom="@dimen/_8sdp"
            android:text="@string/Password"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleTint="@color/gray2"
            android:theme="@style/TextInputLayoutStyle"
            android:paddingHorizontal="-12dp"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edPassword"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:background="@color/toolbarColor"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignUp"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_40sdp"
            style="@style/buttonStyle"
            android:text="@string/signup2"

             />

        <LinearLayout
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="12dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/haveAccount"
                android:textColor="@color/gray"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:text="@string/login"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp" />

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>