<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Fragments.ForgetPasswordFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_22sdp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_18sdp"
            android:text="@string/reset_password"
            android:textColor="@color/black1"
            android:textSize="@dimen/_25sdp" />

        <TextView
            style="@style/LabelStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_35sdp"
            android:text="@string/Email" />


        <EditText
            android:id="@+id/edEmail"
            style="@style/EditTextStyle" />

        <TextView
            style="@style/LabelStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           android:layout_marginVertical="@dimen/_8sdp"
            android:gravity="center"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/blue1"
            android:text="@string/password_sent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            style="@style/buttonStyle"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/send_password"

            />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>