<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingVertical="@dimen/_20sdp">


    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/ChooseAppLanguage"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:orientation="horizontal"
        android:weightSum="2">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnEnglish"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/blue1"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/English"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:backgroundTint="@null"
            app:cornerRadius="0dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnArabic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/gray3"
            android:foreground="?attr/selectableItemBackground"
            android:text="@string/Arabic"
            android:textAllCaps="false"
            android:textColor="@color/black"
            app:backgroundTint="@null"

            app:cornerRadius="0dp" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnOk"
        style="@style/buttonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_40sdp"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/btnOk"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        app:backgroundTint="@color/blue1"
        app:cornerRadius="@dimen/_5sdp"
        app:elevation="0dp" />

</LinearLayout>

