<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.Registration.LoginFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_22sdp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_18sdp"
            android:text="@string/login"
            android:textColor="@color/black1"
            android:textSize="@dimen/_30sdp" />
        <!--        <com.google.android.material.textfield.TextInputLayout-->
        <!--            android:id="@+id/emailTextInputLayout"-->
        <!--            android:layout_width="match_parent"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginTop="30dp"-->
        <!--            app:hintAnimationEnabled="true"-->
        <!--            >-->
        <!--            <com.google.android.material.textfield.TextInputEditText-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:hint="@string/Email"-->
        <!--                android:inputType="textEmailAddress"-->
        <!--                android:textAlignment="viewStart"-->
        <!--                android:paddingStart="0dp"-->
        <!--                android:paddingEnd="0dp"-->
        <!--                android:textColor="@color/black"-->
        <!--                android:textColorHint="@color/black"-->
        <!--                android:textSize="@dimen/_14sdp"-->
        <!--                app:backgroundTint="@android:color/transparent" />-->
        <!--        </com.google.android.material.textfield.TextInputLayout>-->


        <TextView
            style="@style/LabelStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_35sdp"
            android:text="@string/Email" />

        <EditText
            android:id="@+id/edEmail"
            style="@style/EditTextStyle" />

        <TextView
            style="@style/LabelStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:text="@string/Password" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="-12dp"
            android:theme="@style/TextInputLayoutStyle"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/gray2">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/toolbarColor"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/btnForgetPassword"
            style="@style/LabelStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:background="?attr/selectableItemBackground"
            android:text="@string/forget_password2"
            android:textColor="@color/blue1"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            style="@style/buttonStyle"
            android:layout_marginHorizontal="@dimen/_5sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:text="@string/login"

            />

        <LinearLayout
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="12dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/haveAccount"
                android:textColor="@color/gray"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="8dp"
                android:text="@string/signup"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>