<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.AddressFragment">

    <FrameLayout
        android:id="@+id/linearLayout12"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/HeaderTitleStyle"
            android:text="@string/address" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerAddress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_120sdp"
            tools:itemCount="3"
            tools:listitem="@layout/rc_address" />

        <LinearLayout
            android:id="@+id/linearLayout6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:orientation="vertical">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAddAddress"
                style="@style/buttonStyle"
                android:layout_marginHorizontal="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_18sdp"
                android:background="@drawable/circle_dash_btn"
                android:text="@string/AddAddress"
                android:textColor="@color/blue1" />


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnContinueToPayment"
                style="@style/buttonStyle"
                android:layout_marginHorizontal="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_14sdp"
                android:layout_marginBottom="@dimen/_18sdp"
                android:text="@string/continueToPayment" />

        </LinearLayout>


    </FrameLayout>


</androidx.constraintlayout.widget.ConstraintLayout>